[package]
name = "fuguex-concrete"
version = "0.1.2"
edition = "2018"
license = "MIT"

[dependencies]
fnv = "1"
fugue = { version = "0.1", registry = "fugue" }
fuguex-hooks = { path = "../fuguex-hooks", version = "0.1", registry = "fugue" }
fuguex-intrinsics = { path = "../fuguex-intrinsics", version = "0.1", registry = "fugue" }
fuguex-machine = { path = "../fuguex-machine", version = "0.1", registry = "fugue" }
fuguex-state = { path = "../fuguex-state", version = "0.1", registry = "fugue" }
log = "0.4"
parking_lot = "0.11"
rayon = "1.5"
thiserror = "1"
