[package]
name = "fuguex-state-derive"
version = "0.2.0"
authors = ["Sam Thomas <st@xv.ax>"]
edition = "2021"
license = "MIT"
description = "A binary analysis framework written in Rust"
homepage = "https://fugue.re"

[lib]
proc_macro = true

[dependencies]
itertools = "0.10"
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"
