[package]
name = "fuguex-state"
version = "0.2.10"
authors = ["Sam Thomas <st@xv.ax>"]
edition = "2018"
license = "MIT"

[dependencies]
fugue = { version = "0.2", registry = "fugue" }
fuguex-state-derive = { path = "../fuguex-state-derive", version = "0.2", registry = "fugue" }
intervals = { version = "0.1", registry = "fugue" }
log = "0.4"
paste = "1"
thiserror = "1"
